// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Drawer should match the snapshot 1`] = `
<styled.div>
  <styled.div
    gridGap="10px"
    padding="10px"
  >
    <styled.div
      colXS={12}
    >
      <ApplicationBar />
    </styled.div>
  </styled.div>
  <styled.div
    gridGap="10px"
    padding="10px"
  >
    <styled.div
      colMD={2}
      colXS={3}
    >
      <NavigationBar />
    </styled.div>
    <styled.div
      colMD={10}
      colXS={9}
    >
      <styled.div />
    </styled.div>
  </styled.div>
</styled.div>
`;

exports[`Drawer should match the snapshot with children 1`] = `
<styled.div>
  <styled.div
    gridGap="10px"
    padding="10px"
  >
    <styled.div
      colXS={12}
    >
      <ApplicationBar />
    </styled.div>
  </styled.div>
  <styled.div
    gridGap="10px"
    padding="10px"
  >
    <styled.div
      colMD={2}
      colXS={3}
    >
      <NavigationBar />
    </styled.div>
    <styled.div
      colMD={10}
      colXS={9}
    >
      <styled.div>
        <p>
          mock
        </p>
      </styled.div>
    </styled.div>
  </styled.div>
</styled.div>
`;
